<resources>
    <string name="app_name">Water Wallha</string>
    <string name="getStarted">Get Started</string>
    <string name="descLogin">Enter your phone number and we will send you an OTP to verify you.</string>
    <string name="descMobile">Mobile No.</string>
    <string name="mobileHint">Phone Number *</string>
    <string name="loginBtnText">Send OTP</string>
    <string name="ctnwithfb">Continue with Facebook</string>
    <string name="ctnwithgoogle">Continue with Google</string>
    <string name="ctnwithemail">Continue with Email</string>
    <string name="termsandconditions">By Continuing. you agree to our terms of Service Privacy Policy and Content Policy</string>
    <string name="textOtpVer">OTP Verification</string>
    <string name="userNum">Enter the OTP sent to</string>
    <string name="moreYourself">Tell us a bit more about Yourself</string>
    <string name="logOutText">Log Out</string>
    <string name="trending">Near By Shops</string>
    <string name="or">or</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="choose_your_payment_method">Choose Your Payment Method</string>
    <string name="your_orders">Your Orders</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYWRhcnNoODU0MCIsImEiOiJja3RnOHJydWQwZzBkMnZxbnMxOHhwNDlvIn0.YKZCrKAR7xO32CgOZGVLEw</string>
    <string name="write_a_review">Write a review</string>
    <string name="review_hint">Write your thoughts about the shop</string>
    <string name="search_restaurants">Search Shop</string>
</resources>
